<resources>
    <string name="app_name">Aplikasi Pertama Bagicode</string>
    <string name="image_splash_screen">image splash screen</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="please_sin_in_to_continue">Please sin in to continue</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="background_right_login">background right login</string>
    <string name="dont_have_an_account_sign_up">Dont have an account? Sign up</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_an_account_please_signin">Already an account? Please Signin</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="financial">financial</string>
    <string name="profile">Profile</string>
    <string name="syamsudin">Syamsudin</string>
    <string name="bagicode">BagiCode</string>
    <string name="image_user">image user</string>
    <string name="background_icon">background icon</string>
    <string name="background_top">background top</string>
</resources>